2011-09-14  Armando Basile  <hmandevteam@gmail.com>

	* Src/Classes/Pcsc.cs: - fix: atrLen SCardStatus parameter on
	winscard require preset

2011-09-13  Armando Basile  <hmandevteam@gmail.com>

	* comex-base.csproj:
	* Properties/AssemblyInfo.cs:
	* Src/Classes/SettingsManager.cs: - removed portname parameter
	in settings file

2011-09-12  Armando Basile  <hmandevteam@gmail.com>

	* comex-base.csproj: - removed specific version requires for
	log4net and comex-base

2011-09-12  Armando Basile  <hmandevteam@gmail.com>

	* comex-base.dll.config: - removed unused row

2011-09-09  Armando Basile  <hmandevteam@gmail.com>

	* comex-base.csproj:
	* Properties/AssemblyInfo.cs: - updated version reference

2011-09-09  Armando Basile  <hmandevteam@gmail.com>

	* comex-base.dll.config: - removed dependence from pcsc-lite
	devel package
	- changed alias (now also .Net see library)

	* Src/Classes/Pcsc.cs: - changed DllImport alias (now also
	.Net see library)

	* Docs/readme: - added license information

2011-09-02  Armando Basile  <hmandevteam@gmail.com>

	* Src/Classes/GlobalObj.cs: - using comex-base for share
	folder search path

2011-09-02  Armando Basile  <hmandevteam@gmail.com>

	* Src/Classes/GlobalObj.cs: - fix: search path of languages
	folder
